--- a/FluentModelBuilder.ConditionalAppearance/ExpressApp.FluentModelBuilder.ConditionalAppearance.csproj
+++ b/FluentModelBuilder.ConditionalAppearance/ExpressApp.FluentModelBuilder.ConditionalAppearance.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{18BF649E-4482-4EB2-9746-FDEA9A1940C9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Para.FluentModelBuilder.ConditionalAppearance</RootNamespace>
-    <AssemblyName>Para.FluentModelBuilder.ConditionalAppearance</AssemblyName>
+    <RootNamespace>ExpressApp.FluentModelBuilder.ConditionalAppearance</RootNamespace>
+    <AssemblyName>ExpressApp.FluentModelBuilder.ConditionalAppearance</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
@@ -36,15 +36,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>paraOfficeSignKey.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>
+    </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DevExpress.Data.v12.2" />
-    <Reference Include="DevExpress.ExpressApp.ConditionalAppearance.v12.2" />
-    <Reference Include="DevExpress.ExpressApp.v12.2" />
+    <Reference Include="DevExpress.Data.v16.1" />
+    <Reference Include="DevExpress.ExpressApp.ConditionalAppearance.v16.1" />
+    <Reference Include="DevExpress.ExpressApp.v16.1" />
+    <Reference Include="DevExpress.Persistent.Base.v16.1" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -59,17 +61,21 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\FluentModelBuilder\Para.FluentModelBuilder.XAF.csproj">
+    <ProjectReference Include="..\FluentModelBuilder\ExpressApp.FluentModelBuilder.XAF.csproj">
       <Project>{ee0cefb7-2b83-4d7a-9657-dffbb6556005}</Project>
-      <Name>Para.FluentModelBuilder.XAF</Name>
+      <Name>ExpressApp.FluentModelBuilder.XAF</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="ExpressApp.FluentModelBuilder.ConditionalAppearance.nuspec" />
     <None Include="packages.config" />
-    <None Include="paraOfficeSignKey.pfx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <PropertyGroup>
+    <PostBuildEvent>cd $(ProjectDir)
+nuget pack $(ProjectName).nuspec  -Verbosity detailed</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
