--- a/FluentModelBuilder/ExpressApp.FluentModelBuilder.XAF.csproj
+++ b/FluentModelBuilder/ExpressApp.FluentModelBuilder.XAF.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{EE0CEFB7-2B83-4D7A-9657-DFFBB6556005}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Para.FluentModelBuilder.XAF</RootNamespace>
-    <AssemblyName>Para.FluentModelBuilder.XAF</AssemblyName>
+    <RootNamespace>ExpressApp.FluentModelBuilder.XAF</RootNamespace>
+    <AssemblyName>ExpressApp.FluentModelBuilder.XAF</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
@@ -36,14 +36,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>paraOfficeSignKey.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>
+    </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DevExpress.Data.v12.2" />
-    <Reference Include="DevExpress.ExpressApp.v12.2" />
+    <Reference Include="DevExpress.Data.v16.1" />
+    <Reference Include="DevExpress.ExpressApp.v16.1" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -69,11 +70,15 @@
     <Compile Include="XafBuilderManager.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ExpressApp.FluentModelBuilder.XAF.nuspec" />
     <None Include="packages.config" />
-    <None Include="paraOfficeSignKey.pfx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <PropertyGroup>
+    <PostBuildEvent>cd $(ProjectDir)
+nuget pack $(ProjectName).nuspec  -Verbosity detailed</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
