--- a/FluentModelBuilder.ConditionalAppearance/ExpressApp.FluentModelBuilder.ConditionalAppearance.nuspec
+++ b/FluentModelBuilder.ConditionalAppearance/ExpressApp.FluentModelBuilder.ConditionalAppearance.nuspec
@@ -2,14 +2,14 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>ExpressApp.FluentModelBuilder.ConditionalAppearance</id>
-        <version>16.1.8-beta1</version>
+        <version>16.2.4-beta1</version>
         <title />
         <authors>M. Bogaerts</authors>
         <owners>Manuel Grundner</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>Fluent Model Builder for the DevExpress.ExpressApp.ContitionalAppearanceModule  Special Thanks to Manuel Grundner (http://www.paragraph-software.at)</description>
         <dependencies>
-            <dependency id="ExpressApp.FluentModelBuilder.XAF" version="1.0.0" />
+            <dependency id="ExpressApp.FluentModelBuilder.XAF" version="16.2.4-beta1" />
         </dependencies>
     </metadata>
     <files>
