--- a/FluentModelBuilder/ExpressApp.FluentModelBuilder.XAF.nuspec
+++ b/FluentModelBuilder/ExpressApp.FluentModelBuilder.XAF.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>ExpressApp.FluentModelBuilder.XAF</id>
-    <version>16.2.4-beta9</version>
+    <version>16.2.6-v2</version>
     <title />
     <authors>M. Bogaerts</authors>
       <owners>Manuel Grundner</owners>
