--- a/FluentModelBuilder/ExpressApp.FluentModelBuilder.XAF.csproj
+++ b/FluentModelBuilder/ExpressApp.FluentModelBuilder.XAF.csproj
@@ -45,7 +45,7 @@
   <ItemGroup>
     <Reference Include="DevExpress.Data.v16.2" />
     <Reference Include="DevExpress.ExpressApp.v16.2" />
-    <Reference Include="DevExpress.Persistent.Base.v16.2 />
+    <Reference Include="DevExpress.Persistent.Base.v16.2" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
