--- a/FluentModelBuilder.ConditionalAppearance/ExpressApp.FluentModelBuilder.ConditionalAppearance.csproj
+++ b/FluentModelBuilder.ConditionalAppearance/ExpressApp.FluentModelBuilder.ConditionalAppearance.csproj
@@ -43,10 +43,10 @@
     </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DevExpress.Data.v16.2" />
-    <Reference Include="DevExpress.ExpressApp.ConditionalAppearance.v16.2" />
-    <Reference Include="DevExpress.ExpressApp.v16.2" />
-    <Reference Include="DevExpress.Persistent.Base.v16.2" />
+    <Reference Include="DevExpress.Data.v16.2, Version=16.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.ExpressApp.ConditionalAppearance.v16.2, Version=16.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.ExpressApp.v16.2, Version=16.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.Persistent.Base.v16.2, Version=16.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
